Kapitel 2: erste Überarbeitung nach Jörg

--- a/contents.tex
+++ b/contents.tex
@@ -72,7 +72,7 @@ KMC    & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden  
 MD     & Molecular Dynamics                  & Molekulardynamik                       \\
 MEAM   & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode \\
 MOSFET & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor       \\
-MPI    & Message Passing Interface           & eine Kommunikationsschnittstelle       \\
+MPI    & Message Passing Interface           & Eine Kommunikationsschnittstelle       \\
 PVD    & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung     \\
 RDF    & Radial Distribution Function        & Radiale Verteilungsfunktion            \\
 ReaxFF & Reactive Force Fields               & Reaktive Kraftfelder                   \\
@@ -105,9 +105,10 @@ Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapo
 $E_\text{A}$       & Aktivierungsenergie            \\
 $p_\text{partial}$ & Partialdruck                   \\
 $\sigma_z$         & RMS-Rauheit einer Oberfläche   \\
-$\tau$             & Dämpfungszeit des Thermostates \\
+$\tau$             & Dämpfungszeit von Thermostaten \\
 \end{tabularx}
 \todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
+\todo[inline]{Verweise von Gleichungen durch Lokalität ersetzen}
 
 %\printglosstex(acr)
 
