--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -17,7 +17,7 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
     CuAg.eam.alloy              & struktur. und thermodyn. Eigenschaften von \ce{Cu-Ag}                        & \cite{williams_embedded-atom_2006}       \\
     cu\_ag\_ymwu.eam.alloy      & Mono-, Di-, Trimere und Inseln von \ce{Cu} auf \ce{Ag}                       & \cite{wu_cu/ag_2009}                     \\
     Cu\_smf7.eam                & Oberflächen von \ce{Ni-Cu}-Legierungen bei \SI{800}{\kelvin}                 & \cite{foiles_calculation_1985}           \\
-    Cu\_u3.eam                  & Oberflächen und Bulks verschiedener Legierungen                              & \cite{foiles_embedded-atom-method_1986}  \\
+    Cu\_u3.eam                  & Oberflächen und Bulksysteme verschiedener Legierungen                        & \cite{foiles_embedded-atom-method_1986}  \\
     Cu\_u6.eam                  & Aktivierungsenergie für Eigendiffusionen                                     & \cite{adams_self-diffusion_1989}         \\
     Cu-Zr\_2.eam.fs             & Flüssige und amorphe \ce{Cu-Zr}-Legierungen                                  & \cite{mendelev_development_2009}         \\
     Cu-Zr.eam.fs                & Flüssige und amorphe \ce{Cu-Zr}-Legierungen                                  & \cite{mendelev_using_2007}               \\
@@ -81,7 +81,7 @@ Wie Tabelle~\ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Param
   \end{subfigure}
   \caption[Vergleich der Schmelztemperatur von Kupfer]{
     Vergleich der Schmelztemperatur von Kupfer.
-    Experimentelle Dichte: \cite{brillo_density_2006}
+    Experimentelle Dichte:~\cite{brillo_density_2006}
   }
   \label{fig:copperthermo}
 \end{figure}
