--- a/literature.bib
+++ b/literature.bib
@@ -1079,12 +1079,12 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/AKA4GUJG/Shapiro and Tombrello - 1999 - Simulation of sputtering induced by high energy go.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E6DMASGK/S0168583X9900141X.html:text/html}
 }
 
-@misc{accelrys_materials_2014,
+@misc{biovia_materials_2014,
 	title = {Materials Studio Web Page},
 	shorttitle = {Materials Studio},
 	url = {http://accelrys.com/products/materials-studio/index.html},
 	journal = {Use Accelrys Materials Studio for materials modeling \& simulation},
-	author = {Accelrys},
+	author = {Biovia},
 	month = nov,
 	year = {2014}
 }
