--- a/mdmethods.tex
+++ b/mdmethods.tex
@@ -31,7 +31,7 @@ An der RDF-Darstellung lässt sich außerdem die Reichweite der Ordnung erkennen
 Radiale Verteilungen von perfekten Kristallen bestehen ausschließlich aus Spitzen an den Gitterpunkten, die auch für große Abstände noch klar erkennbar sind.
 Bei amorphen Materialien hingegen konvergiert die Funktion schnell gegen den Grenzwert von 1, der anzeigt, dass keine langreichweitige Ordnung mehr vorhanden ist.
 
-Beispiele radialer Verteilungsfunktionen finden sich in Abbildungen \ref{fig:siliconresults-b}, \ref{fig:kulkarnirdf} und \ref{fig:amorphousrdf}.
+Beispiele radialer Verteilungsfunktionen finden sich in Abbildungen~\ref{fig:siliconresults-b},~\ref{fig:kulkarnirdf} und~\ref{fig:amorphousrdf}.
 
 \todo[inline]{Formel zur Berechnung der RDF aus einer Punktwolke}
 
