--- a/metadaten.tex
+++ b/metadaten.tex
@@ -1,8 +1,8 @@
 %======================================================================
-%	Metadaten
+%  Metadaten
 %======================================================================
-%	$Id$
-%	Original template: Matthias Kupfer
+%  $Id$
+%  Original template: Matthias Kupfer
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
@@ -38,17 +38,17 @@
 \newcommand{\dcdepartadvisor}{\dcdepartext}
 \newcommand{\dcgroupadvisor}{Simulationsgruppe}
 
-\newcommand{\dckeywords}{Draft: Enter Keywords Here}
+\newcommand{\dckeywords}{Enter Keywords Here}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
 \hypersetup{%
-	pdftitle	= {\dctitle}, %
-	pdfsubject	= {\dcsubject, \dcdate}, %
-	pdfauthor	= {\dcauthorfirstname~\dcauthorlastname, \dcauthoremail}, %
-	pdfkeywords	= {\dckeywords}, %
-	pdfcreator	= {pdfTeX with Hyperref and Thumbpdf}, %
-	pdfproducer	= {LaTeX, hyperref, thumbpdf}, %
-	% weitere PDF-Einstellungen in hyperref.cfg
+  pdftitle  = {\dctitle}, %
+  pdfsubject  = {\dcsubject, \dcdate}, %
+  pdfauthor  = {\dcauthorfirstname~\dcauthorlastname, \dcauthoremail}, %
+  pdfkeywords  = {\dckeywords}, %
+  pdfcreator  = {pdfTeX with Hyperref and Thumbpdf}, %
+  pdfproducer  = {LaTeX, hyperref, thumbpdf}, %
+  % weitere PDF-Einstellungen in hyperref.cfg
 }
 %%======================================================================
