--- a/settings.tex
+++ b/settings.tex
@@ -61,3 +61,6 @@
 \DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
 \DeclareSIUnit\week{w}
 \def\oddrowcolors{\rowcolors{0}{white}{lightgray}}
+
+%threeparttable textwidth
+\renewcommand{\TPTminimum}{\textwidth}
