--- a/titel.tex
+++ b/titel.tex
@@ -1,5 +1,5 @@
 %======================================================================
-%	Titelseite
+%  Titelseite
 %======================================================================
 
 % Wir setzten hier die Seitennummerierung auf Großrömisch, auch wenn diese
@@ -14,36 +14,36 @@
 %% Schmutztitel
 %%======================================================================
 %\extratitle{
-%	\usekomafont{disposition}\mdseries
-%	\begin{center}
-%		\Huge \dcsubject\\[1.5ex]
-%		\hrule
-%		\vspace*{\fill}
-%		\includegraphics{TUC_deutsch_einzeile_CMYK}
-%	\end{center}
+%  \usekomafont{disposition}\mdseries
+%  \begin{center}
+%    \Huge \dcsubject\\[1.5ex]
+%    \hrule
+%    \vspace*{\fill}
+%    \includegraphics{TUC_deutsch_einzeile_CMYK}
+%  \end{center}
 %}
 
 %%======================================================================
 %% Titelkopf
 %%======================================================================
 \titlehead{
-	\vspace*{-1.5cm}
-	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.1]{img/logo_tu_tailored}}\\
-		\hrulefill \\[1em]
-		{\Large\dcdepart}\\[0.2em]
-		\dcinstitute\\[0.5em]
-%		{\Large\dcdepartsecond}\\[0.5em]
-%		\dcprofsecond
-	\end{center}
-	\vspace*{0.1cm}
-	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.2]{img/logo_fhg_tailored}}\\
-		\hrulefill \\[1em]
-		{\Large\dcinstituteext}\\[0.2em]
-		\dcdepartext\\[0.5em]
-	\end{center}
-	\vspace*{0.5cm}
+  \vspace*{-1.5cm}
+  \begin{center}
+    \raisebox{-1ex}{\includegraphics[scale=1.1]{img/logo_tu_tailored}}\\
+    \hrulefill \\[1em]
+    {\Large\dcdepart}\\[0.2em]
+    \dcinstitute\\[0.5em]
+%    {\Large\dcdepartsecond}\\[0.5em]
+%    \dcprofsecond
+  \end{center}
+  \vspace*{0.1cm}
+  \begin{center}
+    \raisebox{-1ex}{\includegraphics[scale=1.2]{img/logo_fhg_tailored}}\\
+    \hrulefill \\[1em]
+    {\Large\dcinstituteext}\\[0.2em]
+    \dcdepartext\\[0.5em]
+  \end{center}
+  \vspace*{0.5cm}
 }
 
 
@@ -58,10 +58,10 @@
 %% Titel
 %%======================================================================
 \title{\huge
-	\dctitle
-	\\
-	\dcsubtitle
-	\vspace*{-0.4em}
+  \dctitle
+  \\
+  \dcsubtitle
+  \vspace*{-0.4em}
 }
 
 %%======================================================================
@@ -80,17 +80,17 @@
 %% Publishers
 %%======================================================================
 \publishers{
-		\begin{tabbing}
-			\hspace*{10.1em}\=\kill
-			\hspace*{4.8em}{Prüfer:}\>\dcexaminerfirst\\[-0.2em]
-								  \>{\small\dcproffirst}\\[0.2em]
-								  \>\dcexaminersecond\\[-0.2em]
-								  \>{\small\dcprofsecond}\\
+    \begin{tabbing}
+      \hspace*{10.1em}\=\kill
+      \hspace*{4.8em}{Prüfer:}\>\dcexaminerfirst\\[-0.2em]
+                  \>{\small\dcproffirst}\\[0.2em]
+                  \>\dcexaminersecond\\[-0.2em]
+                  \>{\small\dcprofsecond}\\
 \\
       \hspace*{4.8em}{Betreuer:}\>\dcadvisor\\[-0.2em]
                   \>{\small\dcinstituteadvisor}
-		\end{tabbing}
-	\vspace*{-7em}
+    \end{tabbing}
+  \vspace*{-7em}
 }
 
 %%======================================================================
@@ -106,6 +106,7 @@
     Juli\or August\or September\or Oktober\or November\or Dezember\fi
     ~\number\year\\
 Stichworte: \dckeywords
+\todo[inline]{keywords setzen}
 }
 
 %%======================================================================
@@ -132,7 +133,7 @@ Stichworte: \dckeywords
 %%======================================================================
 %%      Kurzfassung / Abstract
 %%======================================================================
-%\def\abstractname{Abstract} 	% Wenn der Text "Zusammenfassung" erscheinen
-								% soll, dann muß dies auskommentiert werden
+%\def\abstractname{Abstract}   % Wenn der Text "Zusammenfassung" erscheinen
+                               % soll, dann muß dies auskommentiert werden
 
 \pagenumbering{roman}
